--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 				<!-- Toggle Switch -->
 				<div id="toggleContainer" style="display: none;">
-					<span id="buroToggle">Buro</span>
+					<span id="buroToggle"><span class="material-symbols-outlined" style="vertical-align: middle;">hearing</span>Buro</span>
 					<label class="switch">
 						<input type="checkbox" id="toggleSwitch" onchange="connecting_Sound.play()">
 						<span class="slider"></span>
@@ -1241,6 +1241,7 @@
 			}
 
 			let hideTimeout; // Variable to store the timeout ID
+
 			function toggleListening() {
 				const toggleSwitch = document.getElementById('toggleSwitch');
 				const deviceName = toggleSwitch.checked ? "hachi_BT" : "avatar_BT";
