--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="top-section">
 				<!-- Listen Button (left half) -->
 				<button id="listenButton" class="button listen-button" onclick="listenFunction()">
-					<span class="material-symbols-outlined" style="vertical-align: middle;">hearing</span> Listen only
+					<span class="material-symbols-outlined" style="vertical-align: middle;">hearing</span>Listen
 				</button>
 
 				<!-- Toggle Switch -->
@@ -42,7 +42,7 @@
 
 				<!-- Interact Button (right half) -->
 				<button id="interactButton" class="button interact-button" onclick="connecting_Sound.play(),interactFunction(), displayText('Interacting with an avatar.')">
-					<span class="material-symbols-outlined" style="vertical-align: middle;"">back_hand</span> Interact
+					<span class="material-symbols-outlined" style="vertical-align: middle;"">back_hand</span>Interact
 				</button>
 			</div>
 			<div class="bottom-section">
