--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 				</div>
 
 				<!-- Interact Button (right half) -->
-				<button id="interactButton" class="button interact-button" onclick="connecting_Sound.play(),interactFunction(), displayText('Interacting with an avatar.')">
+				<button id="interactButton" class="button interact-button" onclick="connecting_Sound.play(),interactFunction(), displayText('Interacting through an avatar.')">
 					<span class="material-symbols-outlined" style="vertical-align: middle;"">back_hand</span>Interact
 				</button>
 			</div>
 			<div class="bottom-section">
 				<!-- Connect Button. -->
-				<button id="connectButton" class="button" style="display: none;" disabled onclick="connecting_Sound.play(), wakeLock(), displayText('Connecting...')">
+				<button id="connectButton" class="button" style="display: none;" disabled onclick="connecting_Sound.play(), wakeLock(), displayText('Connecting to an avatar...')">
 					<span class="material-icons" style="vertical-align: middle;">bluetooth_searching</span> Connect to Avatar
 				</button>
 			</div>
