--- a/index.html
+++ b/index.html
@@ -32,12 +32,18 @@
 
 				<!-- Toggle Switch -->
 				<div id="toggleContainer" style="display: none;">
-					<span id="buroToggle"><span class="material-symbols-outlined" style="vertical-align: middle;">accessibility_new</span><br>Buro</span>
+					<span id="buroToggle">
+						<span class="material-symbols-outlined" style="vertical-align: middle;">accessibility_new</span>
+						<span class="label">Buro</span>
+					</span>
 					<label class="switch">
 						<input type="checkbox" id="toggleSwitch" onchange="connecting_Sound.play()">
 						<span class="slider"></span>
 					</label>
-					<span id="hachiToggle"><span class="material-symbols-outlined" style="vertical-align: middle;">pets</span><br>Hachi</span>
+					<span id="hachiToggle">
+						<span class="material-symbols-outlined" style="vertical-align: middle;">pets</span>
+						<span class="label">Hachi</span>
+					</span>
 				</div>
 
 				<!-- Interact Button (right half) -->
