--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<span class="label">Buro</span>
 					</span>
 					<label class="switch">
-						<input type="checkbox" id="toggleSwitch" onchange="connecting_Sound.play()">
+						<input type="checkbox" id="toggleSwitch" onchange="forward_Sound.play()">
 						<span class="slider"></span>
 					</label>
 					<span id="hachiToggle">
