--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
 								tagSource = 'tags.json';
 								initializeSounds();
 								document.getElementById("hachiCheckbox").click();
+								notification_Sound.play();
 							} else {
 								console.log("Loading settings for Avatar_BT");
 								labels = ["LEFT FOREARM", "LEFT SHOULDER", "HEAD", "RIGHT SHOULDER", "RIGHT FOREARM", "WAIST", "LEFT LEG", "RIGHT LEG"];
@@ -190,6 +191,7 @@
 								sentenceSource = 'avatar_sentences.json';
 								tagSource = 'tags.json';
 								initializeSounds();
+								notification_Sound.play();
 							}
 							// Listen for characteristic value changes
 							characteristic.addEventListener("characteristicvaluechanged", handleCharacteristicValueChanged);
@@ -219,6 +221,7 @@
 				}
 				// Attach click event listener to button.
 				document.getElementById("connectButton").addEventListener("click", connectToDevice);
+
 				// Function to handle incoming data from UART
 				function handleCharacteristicValueChanged(event) {
 					const value = event.target.value;
