--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			</div>
 			<div class="bottom-section">
 				<!-- Connect Button. -->
-				<button id="connectButton" class="button" style="display: none;" disabled onclick="connecting_Sound.play(), wakeLock(), displayText('Connecting to an avatar...')">
+				<button id="connectButton" class="button" style="display: none;" disabled onclick="connecting_Sound.play(), wakeLock(), displayText('Connecting to an avatar.')">
 					<span class="material-icons" style="vertical-align: middle;">bluetooth_searching</span> Connect to Avatar
 				</button>
 			</div>
