--- a/index.html
+++ b/index.html
@@ -1285,6 +1285,7 @@
 						topSection.style.display = 'none';
 						displayText("Listening as "+characterName+".");
 						window[characterName + "_Sound"].play();
+						console.log("Reading from two");
 					}
 				}, 5000);
 			}
@@ -1297,6 +1298,7 @@
 			
 			//Start reading the database only once the avatar is connected
 			if (isConnected === true && listenClient === false){ 
+				console.log("Reading from one");
 				readFromDatabase(deviceName); // Read data after writing,
 			}
 
