--- a/index.html
+++ b/index.html
@@ -1251,10 +1251,12 @@
 				if (checkbox.checked) {
 					off(ref(database, databaseName));
 					readFromDatabase(deviceName); // Read data after writing
+					console.log("Reading from three");
 
 				} else {
 					off(ref(database, databaseName));
 					readFromDatabase(deviceName); // Read data after writing
+					console.log("Reading from four");
 				}
 			}
 
