--- a/index.html
+++ b/index.html
@@ -1257,6 +1257,7 @@
 					off(ref(database, databaseName));
 					readFromDatabase(deviceName); // Read data after writing
 					console.log("Reading from four");
+
 				}
 			}
 
@@ -1298,11 +1299,11 @@
 				}
 			}, 200);
 			
-			// //Start reading the database only once the avatar is connected
-			// if (isConnected === true && listenClient === false){ 
-			// 	console.log("Reading from one");
+			//Start reading the database only once the avatar is connected
+			if (isConnected === true && listenClient === false){ 
+				console.log("Reading from one");
 				readFromDatabase(deviceName); // Read data after writing,
-			// }
+			}
 
 			document.addEventListener('DOMContentLoaded', function() {
 				var listenHachi = document.getElementById("hachiCheckbox");
