--- a/index.html
+++ b/index.html
@@ -1300,10 +1300,10 @@
 			}, 200);
 			
 			//Start reading the database only once the avatar is connected
-			if (isConnected === true && listenClient === false){ 
+	//		if (isConnected === true && listenClient === false){ 
 				console.log("Reading from one");
 				readFromDatabase(deviceName); // Read data after writing,
-			}
+	//		}
 
 			document.addEventListener('DOMContentLoaded', function() {
 				var listenHachi = document.getElementById("hachiCheckbox");
