--- a/index.html
+++ b/index.html
@@ -1297,13 +1297,17 @@
 				if (listenClient === false ){
 					writeToDatabase();
 				}
+				if (isConnected === true && listenClient === false){ 
+						console.log("Reading from one");
+				readFromDatabase(deviceName); // Read data after writing,
+				}
 			}, 200);
 			
-			//Start reading the database only once the avatar is connected
-	//		if (isConnected === true && listenClient === false){ 
-				console.log("Reading from one");
-				readFromDatabase(deviceName); // Read data after writing,
-	//		}
+	// 		//Start reading the database only once the avatar is connected
+	// //		if (isConnected === true && listenClient === false){ 
+	// 			console.log("Reading from one");
+	// 			readFromDatabase(deviceName); // Read data after writing,
+	// //		}
 
 			document.addEventListener('DOMContentLoaded', function() {
 				var listenHachi = document.getElementById("hachiCheckbox");
