--- a/index.html
+++ b/index.html
@@ -1293,21 +1293,18 @@
 				}, 5000);
 			}
 			
+			let hasRun = false; // Flag to ensure the block runs only once
+
 			setInterval(() => {
 				if (listenClient === false ){
 					writeToDatabase();
 				}
-				if (isConnected === true && listenClient === false){ 
-						console.log("Reading from one");
-				readFromDatabase(deviceName); // Read data after writing,
+				if (isConnected === true && listenClient === false && !hasRun){ 
+					console.log("Reading from one");
+					readFromDatabase(deviceName); // Read data after writing,
+					hasRun = true;
 				}
 			}, 200);
-			
-	// 		//Start reading the database only once the avatar is connected
-	// //		if (isConnected === true && listenClient === false){ 
-	// 			console.log("Reading from one");
-	// 			readFromDatabase(deviceName); // Read data after writing,
-	// //		}
 
 			document.addEventListener('DOMContentLoaded', function() {
 				var listenHachi = document.getElementById("hachiCheckbox");
