--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1073,14 +1073,14 @@ Promise.all([
   variables().hachi_walking_speed = hachiSpeed;
   variables().avatar_amenity = avatarAmenity;
   variables().hachi_amenity = hachiAmenity;
-  variables().avatar_t_stop=avatarStop.stopName;
-  variables().avatar_t_route=avatarStop.routeShortName;
-  variables().avatar_t_heading=avatarStop.tripHeadSign;
-  variables().avatar_t_type=avatarStop.routeType;
-  variables().hachi_t_stop=hachiStop.stopName;
-  variables().hachi_t_route=hachiStop.routeShortName;
-  variables().hachi_t_heading=hachiStop.tripHeadSign;
-  variables().hachi_t_type=hachiStop.routeType;
+  //variables().avatar_t_stop=avatarStop.stopName;
+  //variables().avatar_t_route=avatarStop.routeShortName;
+  //variables().avatar_t_heading=avatarStop.tripHeadSign;
+  //variables().avatar_t_type=avatarStop.routeType;
+  //variables().hachi_t_stop=hachiStop.stopName;
+  //variables().hachi_t_route=hachiStop.routeShortName;
+  //variables().hachi_t_heading=hachiStop.tripHeadSign;
+  //variables().hachi_t_type=hachiStop.routeType;
 
   console.log(&quot;Avatar walking speed is: &quot; + variables().avatar_speed);
   console.log(&quot;Hachi walking speed is: &quot; + variables().hachi_speed);
