--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2299,8 +2299,8 @@ $avatar_passage
   &lt;&lt;set $avatar_passage to &quot;avatar_pre_04A/&#39;Hachi! Over here!&#39; Buro calls out, his voice filled with excitement... but nothing happens./m_cheeree&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if ($avatar_narrating == &quot;avatar_pre_04false&quot; or $avatar_narrating == &quot;avatar_pre_04Afalse&quot;) and ($avatar_movement == &quot;Standing left leg&quot; or $avatar_movement == &quot;Standing right leg&quot;) &gt;&gt;
-  &lt;&lt;set $avatar_passage to &quot;avatar_pre_04B/He stands on one leg, straining to get a better view of Hachi walking away through the&quot; + $storyCity +&quot; streets.&quot;&gt;&gt;
+&lt;&lt;if ($avatar_narrating == &quot;avatar_pre_03false&quot; || $avatar_narrating == &quot;avatar_pre_04Afalse&quot;) and ($avatar_movement == &quot;Standing left leg&quot; || $avatar_movement == &quot;Standing right leg&quot;) &gt;&gt;
+  &lt;&lt;set $avatar_passage to &quot;avatar_pre_04B/He stands on one leg, straining to get a better view of Hachi walking away through the &quot; + $storyCity +&quot; streets.&quot;&gt;&gt;
   &lt;&lt;set $nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -2420,7 +2420,7 @@ $hachi_passage
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;
 </tw-passagedata><tw-passagedata pid="62" name="avatar_act1_1" tags="" position="2100,725" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $avatar_passage to &quot;avatar_act1_01/As Buro calls out to Hachi, he realizes that Hachi isn&#39;t responding. He worries, as he looks at &quot; + $avatar_street +&quot;, searching for any sign of his furry friend. &quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;avatar_act1_01/As Buro calls out to Hachi, he realizes that Hachi isn&#39;t responding. He worries, as he looks at &quot; + $avatar_street +&quot; street, searching for any sign of his furry friend. &quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $avatar_passage
