--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1946,7 +1946,7 @@ $avatar_passage
 
 &lt;&lt;if $avatar_narrating == &quot;avatar_tobacco1_00false&quot; and $avatar_movement == &quot;Looking&quot;&gt;&gt;
   &lt;&lt;set $avatar_passage to &quot;avatar_tobacco1_01/Buro takes a moment to observe his surroundings, hoping to spot any familiar signs or clues that might lead him to Hachi.
-&#39;Let&#39;s see if I can spot any familiar faces or places around here, Buro said to himself&#39;./crowd2&gt;&gt;
+&#39;Let&#39;s see if I can spot any familiar faces or places around here, Buro said to himself&#39;./crowd2&quot;&gt;&gt;
 &lt;&lt;set $avatar_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -1971,7 +1971,7 @@ $avatar_passage
 $avatar_passage
 
 &lt;&lt;if $avatar_narrating == &quot;avatar_tobacco3_00false&quot; and $avatar_part_mov == &quot;head&quot;&gt;&gt;
-  &lt;&lt;set $avatar_passage to &quot;avatar_tobacco3_01/Good afternoon, Mr. Wei. I was wondering if you&#39;ve seen a dog around here lately. He&#39;s a bit mischievous but very friendly. He has a beautiful caramel colored fur./m_intrigued&gt;&gt;
+  &lt;&lt;set $avatar_passage to &quot;avatar_tobacco3_01/Good afternoon, Mr. Wei. I was wondering if you&#39;ve seen a dog around here lately. He&#39;s a bit mischievous but very friendly. He has a beautiful caramel colored fur./m_intrigued&quot;&gt;&gt;
 &lt;&lt;set $avatar_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -2113,7 +2113,7 @@ $avatar_passage
 
 &lt;&lt;if $avatar_narrating == &quot;avatar_church1_00false&quot; and $avatar_movement == &quot;Looking&quot;&gt;&gt;
   &lt;&lt;set $avatar_passage to &quot;avatar_church1_01/Buro steps close to the big arch framing the doors to the church. He scans the steps, the nearby trees, and the stained-glass windows, searching for any trace of Hachi&#39;s presence.
-As he approach, Buro said to himself, &#39;Let&#39;s see if there&#39;s any sign of Hachi here. Maybe he&#39;s left a clue behind.&#39;/m_heysh2&gt;&gt;
+As he approach, Buro said to himself, &#39;Let&#39;s see if there&#39;s any sign of Hachi here. Maybe he&#39;s left a clue behind.&#39;/m_heysh2&quot;&gt;&gt;
 &lt;&lt;set $avatar_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
