--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1033,7 +1033,7 @@ Loading variables...
 &lt;&lt;if $avatar_status == &quot;Online&quot; and $hachi_status==&quot;Online&quot;&gt;&gt;
 &lt;div id=&quot;bottomContainer&quot;&gt;
 	&lt;div id=&quot;avatar_story&quot;&gt;
-          &lt;&lt;include &quot;avatar_preamble&quot;&gt;&gt;
+          &lt;&lt;include &quot;avatar_act2&quot;&gt;&gt;
 	&lt;/div&gt;
 	&lt;div id=&quot;hachi_story&quot;&gt;
            &lt;&lt;include &quot;empty&quot;&gt;&gt;	
@@ -1412,7 +1412,7 @@ $avatar_passage
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $avatar_nextAct is true and avatar_narrating == &quot;avatar_act2_01false&quot;&gt;&gt;
- &lt;&lt;set $avatar_passage to &quot;avatar_pre_05/And so, Buro starts walking again.&quot;&gt;&gt;
+ &lt;&lt;set $avatar_passage to &quot;avatar_act2_02/And so, Buro starts walking again.&quot;&gt;&gt;
     &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;avatar_act2_transition&quot;&gt;&gt;
         &lt;&lt;set $hachi_nextAct to false&gt;&gt;
@@ -1913,7 +1913,7 @@ $avatar_passage
 Buro engages in conversation with Mr. Wei, the elderly shopkeeper, hoping to gather information about Hachi&#39;s recent whereabouts./m_agreeable&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if $avayar_narrating == &quot;hachi_tobacco2_01false&quot;&gt;&gt;
+&lt;&lt;if $avayar_narrating == &quot;hachi_tobacco2_00false&quot;&gt;&gt;
   &lt;&lt;if $avatar_movement !== &quot;Greeting&quot; and $avatar_movement !==&quot;none&quot; and $avatar_movement !== &quot;&quot;&gt;&gt;
 	&lt;&lt;include &quot;commentMovement_avatar&quot;&gt;&gt;
   &lt;&lt;/if&gt;&gt;
@@ -1924,7 +1924,7 @@ Buro engages in conversation with Mr. Wei, the elderly shopkeeper, hoping to gat
 &lt;&lt;set $avatar_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if $avayar_narrating == &quot;avatar_tobacco2_02false&quot;&gt;&gt;
+&lt;&lt;if $avayar_narrating == &quot;avatar_tobacco2_01false&quot;&gt;&gt;
   &lt;&lt;if $avatar_movement !== &quot;Picking down&quot; and $avatar_movement !== &quot;Picking up&quot;  and $avatar_movement !==&quot;none&quot; and $avatar_movement !== &quot;&quot;&gt;&gt;
 	&lt;&lt;include &quot;commentMovement_avatar&quot;&gt;&gt;
   &lt;&lt;/if&gt;&gt;
@@ -2011,7 +2011,7 @@ $avatar_passage
 &lt;&lt;set $avatar_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if $avatar_narrating == &quot;avatar_bakery3_00false&quot;&gt;&gt;
+&lt;&lt;if $avatar_narrating == &quot;avatar_bakery3_01false&quot;&gt;&gt;
   &lt;&lt;if $avatar_movement !== &quot;Looking&quot; and $avatar_movement !==&quot;none&quot; and $avatar_movement !== &quot;&quot;&gt;&gt;
 	&lt;&lt;include &quot;commentMovement_avatar&quot;&gt;&gt;
   &lt;&lt;/if&gt;&gt;
